js/src/styles/sidebar.scss
@import "variables.scss";

.sidebar {
    background-color: $sidebar-bg;
    color: #fff;
    padding: 1rem;

    @media (min-width: 768px) {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        z-index: 100;
        padding: 48px 1rem 1rem;

        .section {
            height: 100%;

            .card {
                height: 100%;
                display: flex;
            }
        }
    }

    .section {
        width: 100%;
        padding: 0;

        .card {
            display: block;
            background-color: transparent;
            color: #fff;
        }

        .card-header {
            background-color: $sidebar-bg !important;
            padding-left: 0;
            padding-right: 0;

            h6 {
                color: #fff;
            }

            .modal-btn {
                color: #fff;
            }
        }

        .card-body {
            padding: 0;
            flex: 1 1 0;

            a {
                color: #fff;
                text-decoration: underline;

                &:hover {
                    text-decoration: underline;
                }
            }

            pre {
                color: #fff;
            }

            .code-cell {
                height: 100%;

                .nteract-outputs {
                    height: 100%;
                }

                .js-plotly-plot {
                    height: 100% !important;
                }
            }
        }

        .output_widget_view,
        .jupyter-widgets,
        .widget-label,
        .widget-readout,
        .widget-label-basic {
            // NBConvert and voila end up with different structure so we use both
            color: #fff;

            input {
                line-height: normal;
            }
        }

        button.jupyter-widgets {
            color: #000;
        }
    }
}

